--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -24,7 +24,7 @@
                 </p>
             </div>
         </div>
-        <div class="table2">
+        <div class="table2 px-5">
             <h4 class="type1" id="yournegs">Your Negotiator(s)</h4>
             <table id="negInfo" class="table table-responsive table-striped table-flush buttonsTable"
                 aria-labelledby="yournegs">
@@ -35,8 +35,7 @@
 
 
 
-                        <th scope="col" width="10%">Edit</th>
-                        <th scope="col" width="10%">Delete</th>
+                       
 
                     </tr>
                 </thead>
@@ -59,12 +58,7 @@
                     <tr>
                         <td>Luis Najera</td>
                         <td>Authorized to sign</td>
-                        <td class="tbl-button"><a title="Edit Negotiator Luis Najera Details"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/offerNegotiatorAction.do?method=edit&amp;Type=editnegotiator&amp;negotiatorId=1"
-                                class="btn btn-primary btn-sm">Edit</a></td>
-                        <td class="tbl-button"><a title="Delete Negotiator Luis Najera Details"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=negotiator&amp;negotiatorId=1"
-                                class="btn btn-primary btn-sm">Delete</a></td>
+                        
                     </tr>
 
                 </tbody>
