--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="table2">
+        <div class="table2 px-5">
             <table aria-labelledby="h1val" class="table table-responsive table-striped table-bordered buttonsTable">
                 <thead>
                     <tr>
