--- a/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
@@ -21,6 +21,7 @@
                 <p>Service and product text file has been named as 'Terms and Conditions Text File'.</p>
             </div>
         </div>
+        <div class="px-5">
         <h4 class="type1">Documents</h4>
         <p>If you have other documents that you want to upload that do not show in the list below, click on 'Other
             (optional-offeror defined)' and select the document you want to upload. Once you select the document type,
@@ -541,6 +542,8 @@
                 </tbody>
             </table>
         </div>
+</div>
+
     </form>
 </ng-template>
 
