--- a/src/app/modules/core/components/card/card.component.html
+++ b/src/app/modules/core/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4 shadow">
 
-    <div class="card-header container">
+    <div class="card-header sticky-top-content">
         <div class="row py-3 px-2">
 
             <h1 class="h3 m-0 gsa-light-blue col-md-8">
