--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -18,9 +18,42 @@
 	        <p>
 	            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
 	        </p>
-	    </div>
-        
+	    </div>  
     </div>
+
+    <div class="row px-5">
+    	<div class="col-lg-8">
+    		<h4 class="type1">Company Details</h4>
+    		<p>UEI Number: DN1AKEH8VZU7<br />
+    		Type of Organization: Corporate Entity (Not Tax Exempt)<br />
+    		Common Parent UEI Number: -<br />
+    		Company Name: NOMADIC DISPLAY CAPITOL INC<br />
+    		Doing Business As (DBA): NOMADIC DISPLAY<br />
+    		Business Type(s) Registered in SAM: For-Profit Organization, Manufacturer of Goods<br />
+    		Business Website: www.nomadicdisplay.com
+    		</p>
+    		
+    	</div>
+    	<div class="col-lg">
+	    	<div class="col-lg">
+	    		<h4 class="type1">Company Address</h4>
+	    		<address>
+	    			10505 FURNACE RD STE 108<br />
+	    			LORTON, VA 22079-2635<br />
+	    			USA
+	    		</address>
+	    	</div>
+	    	<div class="col-lg">
+	    		<h4 class="type1">Mailing Address</h4>
+	    		<address>
+	    			10505 FURNACE RD STE 108<br />
+	    			LORTON, VA 22079-2635<br />
+	    			USA
+	    		</address>
+	    	</div>
+	    </div>
+    </div>
+    <!--
     <div class="corset">
 		<h4 class="type1">Company Details</h4>
 		<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
@@ -131,6 +164,7 @@
 			</tr>
 		</tbody></table>
 	</div>
+	-->
 
 	<form id="saveAndContinueAction" name="editForm" action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
 		<input type="hidden" name="token" value="null">
