--- a/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
@@ -10,7 +10,7 @@
 
 <!-- Readonly Section -->
 <ng-template #readonlySection>
-    <form id="pathwayToSuccess">
+    <form id="pathwayToSuccess" class="pb-5">
         <div class="usa-alert usa-alert-info mb-4">
             <div class="usa-alert-body">
                 <p>Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS
@@ -18,58 +18,65 @@
                     submitting a streamlined offer.</p>
             </div>
         </div>
-        <h4>SECTION 1 (NEW OFFERORS ONLY)</h4>
-        <span class="h6">You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
-            located
-            at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training
-            provides
-            an
-            overview of the GSA Schedule, the offer process and required information, and considerations you need to
-            make as
-            you
-            are developing your offer. The Readiness Assessment is a series of questions that helps you determine the
-            readiness
-            of your company to become a successful GSA Schedule contractor.</span>
-        <br>
-        <br>
-        <div>
-            <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
-                id="pathwayToSuccessCertAction_pathwayAcknowledged"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_pathwayAcknowledged" name="__checkbox_pathwayAcknowledged"
-                value="true">
-            I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located
-            at&nbsp;<a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.
-            &nbsp;
-        </div>
-        <br>
-        <div>
-            <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
-                id="pathwayToSuccessCertAction_readinessAcknowledged"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_readinessAcknowledged" name="__checkbox_readinessAcknowledged"
-                value="true">
-            I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
-                href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.&nbsp;
-        </div>
+        <div class="px-5">
+                <h4>SECTION 1 (NEW OFFERORS ONLY)</h4>
+                <p>You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
+                    located
+                    at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training
+                    provides
+                    an
+                    overview of the GSA Schedule, the offer process and required information, and considerations you need to
+                    make as
+                    you
+                    are developing your offer. The Readiness Assessment is a series of questions that helps you determine the
+                    readiness
+                    of your company to become a successful GSA Schedule contractor.
+                </p>
+
+                <div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
+                        id="pathwayToSuccessCertAction_pathwayAcknowledged" class="custom-control-input" >
+                        <input type="hidden"
+                        id="__checkbox_pathwayToSuccessCertAction_pathwayAcknowledged" name="__checkbox_pathwayAcknowledged"
+                        value="true">
+                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located at&nbsp;<a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months. &nbsp;
+                        </label>
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
+                        id="pathwayToSuccessCertAction_readinessAcknowledged" class="custom-control-input">
+                        <input type="hidden"
+                        id="__checkbox_pathwayToSuccessCertAction_readinessAcknowledged" name="__checkbox_readinessAcknowledged"
+                        value="true" >
+                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
+                        href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.&nbsp;
+                        </label>
+                    </div>   
+                </div>
+
+                <div>
+                    
+                </div>
 
 
 
-        <br><br>
-        <hr>
-        <br><br>
+               
+                <hr>
+               
 
 
-        <h4>SECTION 2 (EXISTING FSS CONTRACTOR ONLY)</h4>
-        <span class="h6">If you are an existing FSS contract holder and this is a streamlined offer you are not required
-            to
-            complete the Pathway to Success and the Readiness Assessment.</span>
+                <h4>SECTION 2 (EXISTING FSS CONTRACTOR ONLY)</h4>
+                <p>If you are an existing FSS contract holder and this is a streamlined offer you are not required to complete the Pathway to Success and the Readiness Assessment.</p>
 
-        <br><br>
-        <div>
-            <input type="checkbox" name="existingFssContractor" value="true"
-                id="pathwayToSuccessCertAction_existingFssContractor"><input type="hidden"
-                id="__checkbox_pathwayToSuccessCertAction_existingFssContractor" name="__checkbox_existingFssContractor"
-                value="true">
-            I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" name="existingFssContractor" value="true"
+                    id="pathwayToSuccessCertAction_existingFssContractor" class="custom-control-input"><input type="hidden"
+                    id="__checkbox_pathwayToSuccessCertAction_existingFssContractor" name="__checkbox_existingFssContractor"
+                    value="true">
+                    <label class="custom-control-label" for="customCheck1">I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+                    </label>
+                </div>    
         </div>
     </form>
 </ng-template>
