--- a/src/assets/theme/buttons.css
+++ b/src/assets/theme/buttons.css
@@ -260,7 +260,9 @@ button[class*='btn-outline-'] {
 .btn-secondary:hover {
   color: #fff !important;
 }
-.btn-outline-secondary {}
+.btn-outline-secondary {
+  border-width: 2px !important;
+}
 .btn-outline-secondary:hover {
   color: #fff !important;
 }
