--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -3,7 +3,7 @@
         <div class="row content-row pb-3">
 
             <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">
-                <div class="sticky-top">
+                <div class="sticky-top-content" style="top: 90px !important">
 
                     <ng-container *ngIf="aside">
                         <ng-container [ngTemplateOutlet]="aside"></ng-container>
