--- a/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
@@ -10,73 +10,59 @@
 
 <!-- Readonly Section -->
 <ng-template #readonlySection>
-    <form id="pathwayToSuccess" class="pb-5">
-        <div class="usa-alert usa-alert-info mb-4">
-            <div class="usa-alert-body">
-                <p>Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS
-                    contractor
-                    submitting a streamlined offer.</p>
-            </div>
-        </div>
-        <div class="px-5">
-                <h4>SECTION 1 (NEW OFFERORS ONLY)</h4>
-                <p>You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
-                    located
-                    at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training
-                    provides
-                    an
-                    overview of the GSA Schedule, the offer process and required information, and considerations you need to
-                    make as
-                    you
-                    are developing your offer. The Readiness Assessment is a series of questions that helps you determine the
-                    readiness
-                    of your company to become a successful GSA Schedule contractor.
-                </p>
+    <form id="pathwayToSuccess">
+        <div>
+            <h4>Section 1 (New Offerers Only)</h4>
+            <p>You are required to complete the “Pathway to Success” training and the “Readiness Assessment”
+                located
+                at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training
+                provides
+                an
+                overview of the GSA Schedule, the offer process and required information, and considerations you need to
+                make as
+                you
+                are developing your offer. The Readiness Assessment is a series of questions that helps you determine
+                the
+                readiness
+                of your company to become a successful GSA Schedule contractor.
+            </p>
 
-                <div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
-                        id="pathwayToSuccessCertAction_pathwayAcknowledged" class="custom-control-input" >
-                        <input type="hidden"
-                        id="__checkbox_pathwayToSuccessCertAction_pathwayAcknowledged" name="__checkbox_pathwayAcknowledged"
-                        value="true">
-                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located at&nbsp;<a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months. &nbsp;
-                        </label>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
-                        id="pathwayToSuccessCertAction_readinessAcknowledged" class="custom-control-input">
-                        <input type="hidden"
-                        id="__checkbox_pathwayToSuccessCertAction_readinessAcknowledged" name="__checkbox_readinessAcknowledged"
-                        value="true" >
-                        <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
-                        href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.&nbsp;
-                        </label>
-                    </div>   
-                </div>
-
-                <div>
-                    
-                </div>
-
-
-
-               
-                <hr>
-               
-
-
-                <h4>SECTION 2 (EXISTING FSS CONTRACTOR ONLY)</h4>
-                <p>If you are an existing FSS contract holder and this is a streamlined offer you are not required to complete the Pathway to Success and the Readiness Assessment.</p>
-
+            <div>
                 <div class="custom-control custom-checkbox">
-                    <input type="checkbox" name="existingFssContractor" value="true"
-                    id="pathwayToSuccessCertAction_existingFssContractor" class="custom-control-input"><input type="hidden"
-                    id="__checkbox_pathwayToSuccessCertAction_existingFssContractor" name="__checkbox_existingFssContractor"
-                    value="true">
-                    <label class="custom-control-label" for="customCheck1">I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+                    <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked"
+                        id="pathwayToSuccessCertAction_pathwayAcknowledged" class="custom-control-input" disabled />
+                    <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and
+                        completed the <b>“Pathway to Success”</b> training located at&nbsp;<a
+                            href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12
+                        months. &nbsp;
                     </label>
-                </div>    
+                </div>
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked"
+                        id="pathwayToSuccessCertAction_readinessAcknowledged" class="custom-control-input" disabled />
+                    <label class="custom-control-label" for="customCheck1">I acknowledge that I have downloaded and
+                        completed the <b>“Readiness Assessment”</b> located at&nbsp;<a
+                            href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12
+                        months.&nbsp;
+                    </label>
+                </div>
+            </div>
+
+            <hr>
+
+            <h4>Section 2 (Existing FSS Contractors Only)</h4>
+            <p>
+                If you are an existing FSS contract holder and this is a streamlined offer you are not required to
+                complete the Pathway to Success and the Readiness Assessment.
+            </p>
+
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" name="existingFssContractor" value="true"
+                    id="pathwayToSuccessCertAction_existingFssContractor" class="custom-control-input" disabled />
+                <label class="custom-control-label" for="customCheck1">
+                    I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+                </label>
+            </div>
         </div>
     </form>
 </ng-template>
@@ -152,27 +138,31 @@
 
 <!-- Actions-->
 <ng-template #sectionActions>
-    <app-modal *ngIf="offerStatus == 'In Progress'" [modalTitle]="sectionData.name" [showModalBtnLabel]="'Edit'"
-        [modalSize]="'xl'">
+
+    <app-modal *ngIf="offerStatus == 'In Progress'" 
+    [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
         <ng-template #modalBody>
             <ng-container [ngTemplateOutlet]="editSection"></ng-container>
         </ng-template>
         <ng-template #modalFooter>
-            <input type="submit" value="Save and Continue" id="saveAndContinue" class="btn btn-primary">
+            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary" (click)="saveForm()">
+            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
         </ng-template>
     </app-modal>
-    
 
     <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
-        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0" aria-controls="dropdown-manage">
+        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
+            aria-controls="dropdown-manage">
             <span class="gsa-light-blue">Actions</span>
             <span class="caret"></span>
         </button>
-        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-basic">
+        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+            aria-labelledby="button-basic">
             <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
             <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
-            <!-- <li role="menuitem"><a class="dropdown-item">Market Research</a></li> 
-        <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
+            <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li> 
+        <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
         </ul>
     </span>
+
 </ng-template>
