--- a/src/app/modules/core/components/modal/modal.component.html
+++ b/src/app/modules/core/components/modal/modal.component.html
@@ -1,31 +1,29 @@
-<button type="button" class="btn btn-default btn-lg p-1 m-0" (click)="openModal(modalTemplate)">
-    <ng-container *ngIf="btnLabel == 'Edit'">
+<button *ngIf="config.showDefaultOpenButton" type="button" class="btn btn-default btn-lg p-1 m-0" (click)="openModal()">
+    <ng-container *ngIf="config.defaultOpenButtonLabel == 'Edit'">
         <span class="fa fa-pencil mr-2 gsa-light-blue"></span>
     </ng-container>
-    <span class="gsa-light-blue">{{btnLabel}}</span>
+    <span class="gsa-light-blue">{{config.defaultOpenButtonLabel}}</span>
 </button>
 
-<ng-template #modalTemplate>
-    <div tabindex="-1" role="dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="h4 modal-title pull-left">{{modalTitle}}</span>
-                <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
-                    <span aria-hidden="true" class="visually-hidden">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <ng-container *ngIf="modalBody">
-                    <ng-container [ngTemplateOutlet]="modalBody"></ng-container>
-                </ng-container>
-            </div>
-            <ng-container *ngIf="modalFooter">
-                <div class="modal-footer">
-                    <div class="button-row">
-                        <ng-container [ngTemplateOutlet]="modalFooter"></ng-container>
-                    </div>
-                </div>
+<ng-template #modalTemplate tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="h4 modal-title pull-left">{{config.modalTitle}}</span>
+            <button *ngIf="config.showDefaultCloseButton" type="button" class="btn-close close pull-right" aria-label="Close" (click)="closeModal()">
+                <span aria-hidden="true" class="visually-hidden">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body px-5 pb-5">
+            <ng-container *ngIf="modalBody">
+                <ng-container [ngTemplateOutlet]="modalBody"></ng-container>
             </ng-container>
         </div>
+        <ng-container *ngIf="modalFooter">
+            <div class="modal-footer">
+                <div class="button-row">
+                    <ng-container [ngTemplateOutlet]="modalFooter"></ng-container>
+                </div>
+            </div>
+        </ng-container>
     </div>
 </ng-template>
