--- a/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
@@ -329,27 +329,31 @@
 
 <!-- Actions-->
 <ng-template #sectionActions>
-    <app-modal *ngIf="offerStatus == 'In Progress'" [modalTitle]="sectionData.name" [showModalBtnLabel]="'Edit'"
-        [modalSize]="'xl'">
+
+    <app-modal *ngIf="offerStatus == 'In Progress'" 
+    [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
         <ng-template #modalBody>
             <ng-container [ngTemplateOutlet]="editSection"></ng-container>
         </ng-template>
         <ng-template #modalFooter>
-            <input type="submit" value="Save and Continue" id="saveAndContinue" class="btn btn-primary">
+            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary" (click)="saveForm()">
+            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
         </ng-template>
     </app-modal>
-    
 
     <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
-        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0" aria-controls="dropdown-manage">
+        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
+            aria-controls="dropdown-manage">
             <span class="gsa-light-blue">Actions</span>
             <span class="caret"></span>
         </button>
-        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-basic">
+        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+            aria-labelledby="button-basic">
             <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
             <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
-            <!-- <li role="menuitem"><a class="dropdown-item">Market Research</a></li> 
-        <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
+            <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li> 
+        <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
         </ul>
     </span>
+
 </ng-template>
