--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -53,124 +53,12 @@
 	    	</div>
 	    </div>
     </div>
-    <!--
-    <div class="corset">
-		<h4 class="type1">Company Details</h4>
-		<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
-			<tbody><tr>
-				<td class="first" width="40%">UEI Number:</td>
-				<td width="60%">
-					DN1AKEH8VZU7
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Type of Organization:</td>
-				<td class="camel">
-					Corporate Entity (Not Tax Exempt)
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Common Parent UEI Number:</td>
-				<td>
-					
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Company Name:</td>
-				<td class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-			</tr>
-			<tr>
-				<td class="first">Doing Business As (DBA):</td>
-				<td class="camel">NOMADIC DISPLAY</td>
-			</tr>
-			<tr>
-				<td class="first">Business Type(s) Registered in SAM: </td>
-				<td class="camel">
-					For-Profit Organization, Manufacturer of Goods.
-				</td>
-			</tr>
-			
-			<tr>
-				<td class="first">Business Website:</td>
-				<td class="alllow">
-					www.nomadicdisplay.com
-				</td>	
-			</tr>
-		</tbody></table>
-
-		 
-		<h4 class="type1">Company Address</h4>
-		<table id="corpAddress" class="table table-responsive table-flush w-100" role="presentation">
-			
-			<tr>
-				<td class="first" width="40%">Street1:</td>
-				<td width="60%" class="camel">
-					10505 FURNACE RD STE 108
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Street2:</td>
-				<td class="camel"></td>
-			</tr>
-			<tr>
-				<td class="first">City:</td>
-				<td class="camel">LORTON</td>
-			</tr>
-			<tr>
-				<td class="first">State:</td>
-				<td class="allcap">VA</td>
-			</tr>
-			<tr>
-				<td class="first">Zip/Postal Code:</td>
-				<td>220792635</td>
-			</tr>
-			<tr>
-				<td class="first">Country:</td>
-				<td class="camel">USA</td>
-			</tr>
-		</table>
-
-		 
-		<h4 class="type1">Mailing Address</h4>
-		<table class="table table-responsive table-flush" role="presentation">
-			
-			<tbody><tr>
-				<td class="first" width="40%">Company Name:</td>
-				<td width="60%" class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-			</tr>
-			<tr>
-				<td class="first">Street1:</td>
-				<td class="camel">10505 FURNACE RD STE 108</td>
-			</tr>
-			<tr>
-				<td class="first">Street2:</td>
-				<td class="camel"></td>
-			</tr>
-			<tr>
-				<td class="first">City:</td>
-				<td class="camel">LORTON</td>
-			</tr>
-			<tr>
-				<td class="first">State:</td>
-				<td class="allcap">VA</td>
-			</tr>
-			<tr>
-				<td class="first">Zip/Postal Code:</td>
-				<td>220792635</td>
-			</tr>
-			<tr>
-				<td class="first">Country:</td>
-				<td class="camel">USA</td>
-			</tr>
-		</tbody></table>
-	</div>
-	-->
 
 	<form id="saveAndContinueAction" name="editForm" action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
 		<input type="hidden" name="token" value="null">
 		<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
 		<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
-			</form>
+	</form>
 
 
 
@@ -315,30 +203,33 @@
 </ng-template>
 
 
-
 <!-- Actions-->
 <ng-template #sectionActions>
-    <app-modal *ngIf="offerStatus == 'In Progress'" [modalTitle]="sectionData.name" [showModalBtnLabel]="'Edit'"
-        [modalSize]="'xl'">
+
+    <app-modal *ngIf="offerStatus == 'In Progress'" 
+    [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
         <ng-template #modalBody>
             <ng-container [ngTemplateOutlet]="editSection"></ng-container>
         </ng-template>
         <ng-template #modalFooter>
-            <input type="submit" value="Save and Continue" id="saveAndContinue" class="btn btn-primary">
+            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary" (click)="saveForm()">
+            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
         </ng-template>
     </app-modal>
-    
 
     <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
-        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0" aria-controls="dropdown-manage">
+        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
+            aria-controls="dropdown-manage">
             <span class="gsa-light-blue">Actions</span>
             <span class="caret"></span>
         </button>
-        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="button-basic">
+        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+            aria-labelledby="button-basic">
             <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
             <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
-            <!-- <li role="menuitem"><a class="dropdown-item">Market Research</a></li> 
-        <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
+            <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li> 
+        <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
         </ul>
     </span>
+
 </ng-template>
